Added Support Hero trait - takes reduced damage from ranged attacks from range 1 or greater. List of Support Heroes: - Cadre Fireblade - Canoness - Cryptek - Dialogus - Ethereal - Lord Commissar - Master of Possession - Painboy - Primaris Psyker - Skitarii Marshal - Spiritseer - Weirdboy

--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -216,4 +216,6 @@
 
     <entry name="MonsterHunter" value="Monster Hunter"/>
     <entry name="MonsterHunterDescription" value="Increases the damage against monstrous creatures."/>
+    <entry name="SupportHero" value="Support"/>
+    <entry name="SupportHeroDescription" value="Increases the ranged damage reduction against attacks from range 2 or higher."/>
 </language>
