--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -119,6 +119,9 @@
     <entry name="Necrons/JudgementOfTheTriarch" value="Judgement Of The Triarch" />
     <entry name="Necrons/JudgementOfTheTriarchDescription" value="Decreases melee attacks." />
     <entry name="Necrons/JudgementOfTheTriarchFlavor" value="Those who defy the will of the Final Triarch are subject to swift and merciless retribution." />
+    <entry name="Necrons/AethericInterception" value="Aetheric Interception" />
+    <entry name="Necrons/AethericInterceptionDescription" value="Reduces the movement." />
+    <entry name="Necrons/AethericInterceptionFlavor" value="With hunters' instincts honed over aeons, the Triarch pounce precisely at the moment their prey enter battle, gunning them down before they can even act." />
     <entry name="Necrons/BloodyCrusadeUnit" value="Bloody Crusade (Aura)" />
     <entry name="Necrons/BloodyCrusadeUnitDescription" value="Increases melee attacks." />
     <entry name="Necrons/HousingBuildingBonusDescription" value="Increases the population limit. Increases damage reduction of units in cities." />
