--- a/Mod/Data/Core/Languages/English/Weapons.xml
+++ b/Mod/Data/Core/Languages/English/Weapons.xml
@@ -10,4 +10,6 @@
     <entry name="HeavyLascannonFlavor" value="<string name='Weapons/LasFlavor'/>" />
     <entry name="EradicatorNovaCannon" value="Eradicator Nova Cannon" />
     <entry name="EradicatorNovaCannonFlavor" value="<string name='Weapons/BattleCannon'/>" />
+    <entry name="CadrePulseRifle" value="Cadre's Pulse Rifle"/>
+    <entry name="CadrePulseRifleFlavor" value="<string name='Weapons/PulseRifleFlavor'/>"/>
 </language>
