--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -63,7 +63,7 @@
     <entry name="Tyranids/ProsperityDescription" value="Increases city growth" />
     <!-- End of Prosperity -->
 
-    <entry name="VehicleDescription" value="Negates the penalty for heavy and ordnance weapons. Increases the movement penalty in forests and imperial ruins. Missing hit points reduces accuracy and movement if has more than one model in group." />
+    <entry name="VehicleDescription" value="Negates the penalty for heavy and ordnance weapons. Increases the movement penalty in forests and imperial ruins. Missing hit points reduces accuracy and movement on single model unit." />
     <entry name="VehicleDamaged" value="Missing 33% hit points" />
     <entry name="VehicleDamagedDescription" value="Reduces the accuracy." />
     <entry name="VehicleHeavilyDamaged" value="Missing 66% hit points" />
@@ -231,4 +231,7 @@
     <entry name="Necrons/DefensiveProtocolsLord" value="<string name='Actions/Necrons/DefensiveProtocols'/>"/>
     <entry name="Necrons/DefensiveProtocolsLordDescription" value="Increases the armour."/>
     <entry name="Necrons/DefensiveProtocolsLordFlavor" value="<string name='Actions/Necrons/DefensiveProtocolsFlavor'/>"/>
+
+    <entry name="UnbreakableVehicle" value="Unbreakable"/>
+    <entry name="UnbreakableVehicleDescription" value="Does not suffer accuracy loss on hit points loss"/>
 </language>
