--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -126,5 +126,11 @@
     <entry name="Tyranids/EnhancedSynapseCreature" value="Enhanced Synapse Creature" />
     <entry name="Tyranids/EnhancedSynapseCreatureDescription" value="Grants this and nearby units immunity to morale, fear and instinctive behaviour effects." />
     <entry name="Tyranids/EnhancedSynapseCreatureFlavor" value="Some Tyranids serve as synaptic conduits or nodal relays through which a portion of the Hive Mind's iron will flows, overriding the natural instincts of the swarm." />
+    <entry name="FragGrenade" value="Frag Grenade"/>
+    <entry name="FragGrenadeDescription" value="Hits multiple group members of the target unit"/>
+    <entry name="FragGrenadeFlavor" value="The lethal storm of shrapnel from these grenades drives opponents further under the cover for a few precious moments, allowing attackers more time to close in and, hopefully, get the first blow in against a disoriented foe."/>
+    <entry name="KrakGrenade" value="Krak Grenade"/>
+    <entry name="KrakGrenadeDescription" value="Increases armour penetration against vehicles and fortifications."/>
+    <entry name="KrakGrenadeFlavor" value="Krak grenades are implosive charges designed to crack vehicle armour."/>
 
 </language>
