Tier 8 upgrade for Astra Militarum - Imperium Of Man. Grants Guardsmen and Tempestus Scions ability to treat shooting with Rapid Fire weapons as if in half range.

--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -179,6 +179,9 @@
     <entry name="AstraMilitarum/BoltDamage" value="The Emperor's Benediction" />
     <entry name="AstraMilitarum/BoltDamageDescription" value="Increases the armour penetration." />
     <entry name="AstraMilitarum/BoltDamageFlavor" value="An Astartes-derived upgrade to the standard bolter, this kit allows a bolter to fire Kraken penetrator rounds, hard-tipped projectiles with a heavier explosive charge. These heavier rounds are much favoured by the Space Marine Deathwatch alien hunters." />
+    <entry name="AstraMilitarum/ImperiumOfMan" value="Imperium of Man"/>
+    <entry name="AstraMilitarum/ImperiumOfManDescription" value="Treats shooting with rapid fire weapons as if in half range."/>
+    <entry name="AstraMilitarum/ImperiumOfManFlavor" value="”The martyr's grave is the keystone of the Imperium.”<br/> — The Liber Imperialis"/>
 
     <entry name="Tau/ReactiveThrustSystem" value="Reactive Thrust System" />
     <entry name="Tau/ReactiveThrustSystemDescription" value="Increases the accuracy and the attacks." />
