Hypercircuit: tier 10 upgrade, makes 1 turn CD of Litany Of The Electromancer

--- a/Mod/Data/Core/Languages/English/Upgrades.xml
+++ b/Mod/Data/Core/Languages/English/Upgrades.xml
@@ -59,9 +59,14 @@
     <entry name="AdeptusMechanicus/MachineSpiritResurgent" value="Machine Spirit Resurgent" />
     <entry name="AdeptusMechanicus/MachineSpiritResurgentDescription" value="Grants Onager Dunecrawlers, Ironstrider Ballistariuses and Knight Crusaders ability to not suffer accuracy loss on hit points loss." />
     <entry name="AdeptusMechanicus/MachineSpiritResurgentFlavor" value="To invigorate the failing machine spirit of a damaged vehicle is a sacred task, greatly aided by certain broadcast datahymns played in the correct sequence."/>
+    <entry name="AdeptusMechanicus/CommandUplinkDescription" value="Adeptus Mechanicus infantry units cannot be shaken or broken."/>
     <entry name="AdeptusMechanicus/ControlEdict" value="Control Edict"/>
     <entry name="AdeptusMechanicus/ControlEdictDescription" value="Removes Doctrina Imperatives malus."/>
     <entry name="AdeptusMechanicus/ControlEdictFlavor" value="A Doctrina Imperative is hardly a subtle tool, disabling a soldier just as much as it enables them elsewhere. Yet, the attentions of an experienced Marshal can aid in overcoming the Imperative’s cruder commands, enabling the soldier to perform far above their nominal norms."/>
+    <entry name="AdeptusMechanicus/Hypercircuit" value="Hypercircuit"/>
+    <entry name="AdeptusMechanicus/HypercircuitDescription" value="Removes cooldown from Litany of the Electromancer."/>
+    <entry name="AdeptusMechanicus/HypercircuitFlavor" value="Summoning the spark of the Machine God’s divinity that burns within them, the Omnissiah’s faithful manifest auras of energy that disrupt the unbeliever’s neuro-cortices and cause the foe to spasm."/>
+
 
     <entry name="Tau/DroneControllerDescription" value="Battlesuit support system that increases the accuracy of adjacent drones. Halves cooldown of drone deployment across most Tau units." />
     <entry name="Tau/GunDroneDescription" value="Grants Piranha, Devilfish, Stealth Battlesuits, Broadside Battlesuits, Cadre Fireblade, Ethereal and Commander the ability to deploy temporary basic combat drones." />
