Knight Crusader rework

--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -4,6 +4,9 @@
     <entry name="AdeptusMechanicus/CommandUplinkDescription" value="Adeptus Mechanicus infantry units cannot be shaken or broken."/>
     <entry name="AdeptusMechanicus/EnrichedRoundsDescription" value="Increases the damage of nearby allied Adeptus Mechanicus infantry units." />
     <entry name="AdeptusMechanicus/ProtectorImperativeDescription" value="Increases the ranged accuracy, but decreases the armour of Doctrina Imperatives units. Cost scales with the amount of affected units (up to 10)."/>
+    <entry name="AdeptusMechanicus/IonShield" value="<string name='Traits/AdeptusMechanicus/IonShield'/>"/>
+    <entry name="AdeptusMechanicus/IonShieldDescription" value="Increases the damage reduction of nearby allied vehicles."/>
+    <entry name="AdeptusMechanicus/IonShieldFlavor" value="<string name='Traits/AdeptusMechanicus/IonShieldFlavor'/>"/>
 
     <entry name="AstraMilitarum/LaurelsOfCommand" value="Laurels of Command" />
     <entry name="AstraMilitarum/LaurelsOfCommandDescription" value="Restores the morale of nearby allied units." />
