Reworked Fulgurite Electro Priests -1 model, Siphon Vigour is activated ability now

--- a/Mod/Data/Core/Languages/English/Traits.xml
+++ b/Mod/Data/Core/Languages/English/Traits.xml
@@ -11,6 +11,7 @@
     <entry name="AdeptusMechanicus/BlessedArmsDebuff" value="Blessed Arms"/>
     <entry name="AdeptusMechanicus/BlessedArmsDebuffDescription" value="Decreases the armour."/>
     <entry name="AdeptusMechanicus/BlessedArmsDebuffFlavor" value="This household reverently maintains the masterwork weapons of former ages, their power undimmed."/>
+    <entry name="AdeptusMechanicus/SiphonVigourDescription" value="Increases the invulnerable damage reduction."/>
 
     <entry name="AstraMilitarum/BoltDamage" value="The Emperor's Benediction" />
     <entry name="AstraMilitarum/BoltDamageDescription" value="Increases the armour penetration." />
