--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -7,6 +7,9 @@
     <entry name="AdeptusMechanicus/IonShield" value="<string name='Traits/AdeptusMechanicus/IonShield'/>"/>
     <entry name="AdeptusMechanicus/IonShieldDescription" value="Increases the damage reduction of nearby allied vehicles."/>
     <entry name="AdeptusMechanicus/IonShieldFlavor" value="<string name='Traits/AdeptusMechanicus/IonShieldFlavor'/>"/>
+    <entry name="AdeptusMechanicus/SiphonVigour" value="Siphon Vigour"/>
+    <entry name="AdeptusMechanicus/SiphonVigourDescription" value="Increases the invulnerable damage reduction."/>
+    <entry name="AdeptusMechanicus/SiphonVigourFlavor" value="<string name='Traits/AdeptusMechanicus/SiphonedVigourFlavor'/>"/>
 
     <entry name="AstraMilitarum/LaurelsOfCommand" value="Laurels of Command" />
     <entry name="AstraMilitarum/LaurelsOfCommandDescription" value="Restores the morale of nearby allied units." />
