--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -10,6 +10,16 @@
     <entry name="AdeptusMechanicus/SiphonVigour" value="Siphon Vigour"/>
     <entry name="AdeptusMechanicus/SiphonVigourDescription" value="Increases the invulnerable damage reduction."/>
     <entry name="AdeptusMechanicus/SiphonVigourFlavor" value="<string name='Traits/AdeptusMechanicus/SiphonedVigourFlavor'/>"/>
+    <entry name="AdeptusMechanicus/GalvanicFieldDescription" value="Increases the armour penetration and accuracy of target allied Canticles of the Omnissiah or flyer unit."/>
+    <entry name="AdeptusMechanicus/TechAdept" value="Tech-Adept"/> <!-- Tech-Priest Manipulus ability -->
+    <entry name="AdeptusMechanicus/TechAdeptDescription" value="Increases healing rate of nearby allied vehicles and fortifications."/>
+    <entry name="AdeptusMechanicus/TechAdeptFlavor" value="Repairing war engines damaged in the crusade is a holy task."/>
+    <entry name="AdeptusMechanicus/ReprogramKastelanRobot" value="Reprogram Kastelan Robot"/>
+    <entry name="AdeptusMechanicus/ReprogramKastelanRobotDescription" value="Increases Repulsor Grid effect and hit points of target allied Kastelan Robot."/>
+    <entry name="AdeptusMechanicus/ReprogramKastelanRobotFlavor" value="Since the aftermath of Warmaster Horus’ rebellion the Legio Cybernetica’s robots have been controlled completely by their masters – not by the bio-plastic cerebra and nerve-like tendril webs of Mechanicum constructs, but by sanctified doctrina wafers. No bigger than the cards of the Emperor’s Tarot, these slivers of wetware are entrusted to the Cybernetica Datasmiths that accompany the robot maniples to war. Inserted into the dataslot hidden behind each robot’s chestplate, the wafer’s command protocol will dictate every iota of the host’s behaviour, usually optimising its ability to destroy its foes in a spectacular fashion."/>
+    <entry name="AdeptusMechanicus/DataBlessedAutosermon" value="Data-Blessed Autosermon"/> <!-- Tech-Priest Manipulus elite -->
+    <entry name="AdeptusMechanicus/DataBlessedAutosermonDescription" value="Grants nearby allied Kastelan Robots ability to not suffer accuracy loss on hit points loss, increases their accuracy. Increases nearby allied Fulgurite Electro Priests attacks."/>
+    <entry name="AdeptusMechanicus/DataBlessedAutosermonFlavor" value="Struck with an infoload of revelation, truly blessed Tech-Priests will override the sacred canticles to deliver the Machine God’s adaptive wisdom."/>
 
     <entry name="AstraMilitarum/LaurelsOfCommand" value="Laurels of Command" />
     <entry name="AstraMilitarum/LaurelsOfCommandDescription" value="Restores the morale of nearby allied units." />
