--- a/Mod/Data/Core/Languages/English/Actions.xml
+++ b/Mod/Data/Core/Languages/English/Actions.xml
@@ -60,6 +60,9 @@
     <entry name="ChaosSpaceMarines/TzeentchCorruptionDescription" value="Gains research when the Daemon Prince gains experience from combat." />
     <entry name="ChaosSpaceMarines/TzeentchCorruptionFlavor" value="Arcane knowledge and mystical power have ever been the domain of Tzeentch and his minions." />
     <entry name="ChaosSpaceMarines/WorthyOfferingDescription" value="Increases the chance that nearby allied Champions of Chaos receive a Boon of Chaos." />
+    <entry name="ChaosSpaceMarines/IconOfVengeance" value="Icon of Vengeance"/>
+    <entry name="ChaosSpaceMarines/IconOfVengeanceDescription" value="Icon of Chaos that grants damage return to a unit with any Mark of Chaos."/>
+    <entry name="ChaosSpaceMarines/IconOfVengeanceFlavor" value="These icons shine brightly in the Warp, gathering the malefic energies of Chaos to those who bear them and spurring them on to acts of suicidal brabery in their quest to seize victory from the minions of the Corpse-god."/>
 
     <entry name="Eldar/ActivateWebwayGateDescription" value="Activates and claims a neutral Webway Gate. Must be within 3 tiles of friendly Eldar unit." />
     <entry name="Eldar/DoomDescription" value="Increases the damage taken by target non-hero enemy unit." />
